# SEQURENet

./: .env  .gitignore  README.md  docker-compose.yml
CI/: github-actions.yml
api_gateway/: app.py  requirements.txt
api_gateway/tests/: test_app.py
condition_verifier/: app.py  requirements.txt
condition_verifier/tests/: test_app.py
docs/: architecture.md  setup.md
networking/: config.yaml
pseudovalidator/: cargo.toml
pseudovalidator/config/: config.yaml
pseudovalidator/src/: config.rs  crypto.rs  main.rs  networking.rs  quorum.rs
pseudovalidator/tests/: test_config.rs
smart_contract/: Cargo.toml
smart_contract/src/: lib.rs
smart_contract/tests/: integration_test.rs
