[package]
name = "smart_contract"
version = "0.1.0"
edition = "2021"

[dependencies]

Core dependencies

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"

Blockchain-specific dependencies (Metriq Network)

metriq-sdk = "0.1"  # Placeholder, replace with actual SDK
metriq-runtime = "0.1"  # Placeholder, replace with actual runtime

Cryptographic utilities

ed25519-dalek = "1.0"
rust-crypto = "0.2"
hex = "0.4"

Asynchronous runtime

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
cargo-husky = "1.5"
mockall = "0.11"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

